@@ -1,10 +1,0 @@
-[Module]
-DisplayName=Sound support (Qt)
-DisplayName[pl]=Obsługa dźwięku (Qt)
-Description=Sound support using standard Qt4 mechanisms
-Description[pl]=Obsługa dźwięku z użyciem standardowych funkcji Qt4
-Author=Kadu Team
-Dependencies=sound
-Provides=sound_driver
-Version=core
-Category=Sound
