@@ -1,13 +1,0 @@
-<?xml version="1.0" ?><!DOCTYPE TS><TS language="fr" version="2.0">
-<context>
-    <name>QObject</name>
-    <message>
-        <source>Kadu</source>
-        <translation>Kadu</translation>
-    </message>
-    <message>
-        <source>QSound API is not available on this platform</source>
-        <translation>L&apos;API QSound n&apos;est pas disponible sur cette plateforme</translation>
-    </message>
-</context>
-</TS>
