@@ -42,4 +42,5 @@ kadu_plugin (sound
 	PLUGIN_SOURCES ${SOURCES}
 	PLUGIN_MOC_SOURCES ${MOC_SOURCES}
 	PLUGIN_CONFIGURATION_FILES ${CONFIGURATION_FILES}
+	PLUGIN_ADDITIONAL_QT_MODULES Multimedia
 )
