@@ -11,6 +11,7 @@
 * chat: #2928 fixed: properly hadnle disabling "Store opened chats" option (Vogel)
 * sound: #2931 fixed: player thread could block itself on exit and never end (Vogel)
 * windows: #2909 fixed: does not restore window geometry when "Start minimized" is on (Vogel)
+* sound: #2935 fixed: sound playing works properly (Vogel)
 
 +++ version 2.0-alpha2
 * windows: #2858 fixed: blinking main window on Kadu exit (Vogel)
@@ -1086,7 +1087,7 @@
 * mediaplayer: #1319 fixed: force mediaplayer to work only when we want it (Juzef)
 * gui: fixed minimized windows actiwation (ultr)
 * gui: #1260 fixed: icons for add-new-account and add-existing-account added (Juzef)
-* qt4_sound: many fixed (Dorr)
+* qt4_sound: many fixes (Dorr)
 * single_window: module ported to 0.6.6 (Dorr)
 * word_fix: module ported to 0.6.6 (Dorr)
 * pc_speaker: module ported to 0.6.6 (Dorr)
